[tool.poetry]
name = "docker_agent"
version = "0.1.0"
description = ""
authors = ["Ilargi12 <bplewnia99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
docker = "^6.0.0"
dataclasses-json = "^0.5.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
